# squad.fish

./: .gitignore  .gitmodules  .nvmrc  Cargo.toml  LICENCE-MIT  README.md  cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
app/: .babelrc  Cargo.toml  package-lock.json  package.json  webpack.config.js
app/config/: wallaby.config.js  webpack.dev.config.js  webpack.prod.config.js
app/main/: index.js
app/main/services/: stream-server.js
app/main/tasks/: add-dev-tools.js  create-main-window.js  create-menu.js  enable-mpv-plugin.js  listen-for-chromecast-requests.js  listen-for-stream-requests.js
app/main/utils/: ipc.js
app/mpv/: libass.9.dylib  libavdevice.57.dylib  libavfilter.6.dylib  libavformat.57.dylib  libavresample.3.dylib  libavutil.55.dylib  libfontconfig.1.dylib  libfreetype.6.dylib  libfribidi.0.dylib  libglib-2.0.0.dylib  libgraphite2.3.dylib  libharfbuzz.0.dylib  libjpeg.9.dylib  liblcms2.2.dylib  libmp3lame.0.dylib  libmpv.1.dylib  libpng16.16.dylib  libpostproc.54.dylib  libswresample.2.dylib  libswscale.4.dylib  libx264.148.dylib  mpvjs.node
app/renderer/: base-styles.js  index.js  initial-actions.js  router.js  theme.js
app/renderer/components/background/: index.js  logo.js
app/renderer/components/buttons/: icon-button.js
app/renderer/components/casts/chromecasts/: button.js  index.js  menu.js
app/renderer/components/controls/: input.js
app/renderer/components/controls/slider/: cursor.js  index.js  progress.js
app/renderer/components/hud/: index.js
app/renderer/components/icons/: chromecast.js  circle-eject.js  circle-first.js  circle-forward.js  circle-last.js  circle-pause.js  circle-play.js  circle-power.js  circle-record.js  circle-rewind.js  circle-stop.js  square-eject.js  square-first.js  square-forward.js  square-last.js  square-pause.js  square-play.js  square-power.js  square-record.js  square-rewind.js  square-stop.js
app/renderer/components/layout/: index.js
app/renderer/components/loading-message/: index.js
app/renderer/components/sidebar/: index.js
app/renderer/components/spinner/: index.js
app/renderer/components/typography/: index.js
app/renderer/components/video/: index.js
app/renderer/components/video-controls/: index.js  play-toggle-button.js
app/renderer/fonts/: index.js
app/renderer/redux/: store.js
app/renderer/redux/modules/: root.js
app/renderer/redux/modules/casts/: actions.js  epics.js  reducer.js
app/renderer/redux/modules/hud/: actions.js  epics.js  reducer.js
app/renderer/redux/modules/mpv/: actions.js  epics.js
app/renderer/redux/modules/notifications/: actions.js  reducer.js
app/renderer/redux/modules/playback/: actions.js  epics.js  mpv-device.js  reducer.js
app/renderer/redux/modules/stream/: actions.js  epics.js  reducer.js
app/renderer/utils/: action-payload.js  action-wait-handle.js  convert-case.js  draggable.js  event-handlers.js  fade.js  filtered-render.js  ipc.js  mpv-mediator.js
app/renderer/views/: video-view.js
app/src/: app.rs  main.rs
com/: Cargo.toml  build.rs
com/src/: com.rs
doom-capture/: Cargo.toml  build.rs
doom-capture-sys/: Cargo.toml  build.rs
doom-capture/src/: main.rs
doomcapture/: Cargo.toml
doomcapture/src/: main.rs
gstreamer-screenshare-plugin/: Cargo.toml  README.md  build.rs
gstreamer-screenshare-plugin/src/: lib.rs  static-func.c
gstreamer-screenshare-plugin/src/applemedia/: .clangd  coremediabuffer.c  coremediabuffer.h  corevideobuffer.c  corevideobuffer.h  corevideomemory.c
gstreamer-screenshare-plugin/src/screencast/: allocator.rs  buffer.rs  core_video_buffer.rs  core_video_memory.rs  core_video_meta.rs  imp.rs  memory.rs  mod.rs  types.rs
screencapturekit/: Cargo.toml  build.rs
screencapturekit-sys/: CMakeCache.txt  Cargo.toml  Makefile  build.rs  cmake_install.cmake
screencapturekit-sys/apple-sys/bindgen/: Bindgen.toml  Cargo.toml
screencapturekit-sys/apple-sys/bindgen/src/: builder.rs
screencapturekit-sys/doom-capture/: Cargo.toml
screencapturekit-sys/examples/: scstream.rs
screencapturekit-sys/protocolfix/: .gitignore  CMakeLists.txt  ProtocolFix.h  libprotocol_fix.dylib
screencapturekit-sys/src/: content_filter.rs  lib.rs  macros.rs  os_types.rs  shareable_content.rs  stream.rs  stream_configuration.rs  stream_output_handler.rs
screencapturekit-sys/src/os_types/: base.rs  four_char_code.rs
screencapturekit-sys/src/sys/: content_filter.rs  shareable_content.rs  stream.rs  stream_configuration.rs
screencapturekit/examples/: cargo.toml  scstream.rs
screencapturekit/examples/src/: main.rs
screencapturekit/protocolfix/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ProtocolFix.h  ProtocolFix.m  cmake_install.cmake  install_name.sh
screencapturekit/protocolfix/ProtocolFix.framework/: ProtocolFix
screencapturekit/protocolfix/ProtocolFix.framework/Versions/A/: ProtocolFix
screencapturekit/protocolfix/ProtocolFix.framework/Versions/A/Resources/: Info.plist
screencapturekit/src/: imp.rs  lib.rs  main.rs  os_types.rs  sc_content_filter.rs  sc_display.rs  sc_output_handler.rs  sc_running_application.rs  sc_shareable_content.rs  sc_stream.rs  sc_stream_configuration.rs  sc_window.rs  shared.rs  sys.rs
screencapturekit/src/os_types/: base.rs  geometry.rs  graphics.rs
screencapturekit/src/sys/: content_filter.rs  shareable_content.rs  stream.rs  stream_configuration.rs  unssc.rs
src/: App.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tauri-plugin-gstreamer/: Cargo.toml  README.md
tauri-plugin-gstreamer/.changes/: config.json  initial-release.md  readme.md
tauri-plugin-gstreamer/src/: lib.rs
theme/: Cargo.toml
theme/src/: active_theme.rs  styles.rs  theme.rs  types.rs
theme/src/styles/: colors.rs  typography.rs
theme/src/types/: color.rs
theme/themes/: default.yaml
ui/: Cargo.toml
ui/src/: components.rs
ui/src/components/: button.rs
workspace/: Cargo.toml
workspace/src/: workspace.rs
