[package]
name = "doomcapture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screencapturekit = {path = "../screencapturekit"}
gst = { package = "gstreamer", version = "0.20" }
gst-base = { package = "gstreamer-base", version = "0.20" }
gst-video = { package = "gstreamer-video", version = "0.20" }
gst-app = { package = "gstreamer-app", version = "0.20" }
anyhow = "1.0"
derive_more = "0.9"
