[package]
name = "gstreamer-screenshare-plugin"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Per Johansson <mail@perjohansson.net>"]
repository = "https://github.com/doom-fish/squad.fish"
description = "GStreamer Screen"



[features]
static = []
capi = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gst = { package = "gstreamer", version = "0.19.4" }
gst-base = { package = "gstreamer-base", version = "0.19.3" }
once_cell = "1.17.0"

[lib]
name = "gstscreen"
crate-type = ["staticlib", "cdylib","lib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.5"