[package]
name = "gstreamer-screenshare-plugin"
version = "0.0.1"
edition = "2021"
authors = ["Per Johansson <mail@perjohansson.net>"]
repository = "https://github.com/doom-fish/squad.fish"
description = "GStreamer Screen"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gst = { package = "gstreamer", version = "0.20" }
gst-base = { package = "gstreamer-base", version = "0.20" }
gst-video = { package = "gstreamer-video", version = "0.20" }
gst-gl = { package = "gstreamer-gl", version = "0.20" }
once_cell = "1"
screencapturekit = { path = "../screencapturekit" }
objc = "0.2"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }

[features]
static = []
capi = []


[lib]
name = "gstscreencapturekit"
crate-type = ["cdylib"]

[build-dependencies]
gst-plugin-version-helper = "0.7.5"
cc = "1"
pkg-config = "0.3"

[dev-dependencies.gst-check]
git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
package = "gstreamer-check"


[package.metadata.capi]
min_version = "0.9.3"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
