[package]
name = "gstreamer-screenshare-plugin"
version = "0.0.1"
edition = "2021"
authors = ["Per Johansson <mail@perjohansson.net>"]
repository = "https://github.com/doom-fish/squad.fish"
description = "GStreamer Screen"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gst = { package = "gstreamer", version = "0.21" }
gst-video = { package = "gstreamer-video", version = "0.21"}
gst-base = { package = "gstreamer-base", version = "0.21" }
screencapturekit = { path = "../screencapturekit-rs/screencapturekit" }
once_cell = "1"


[lib]
name = "gstscreencapturekit"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.5"

[dev-dependencies]
gst-check = { package = "gstreamer-check", version ="0.21" }


[features]
static = []
capi = []

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"

