[package]
name = "screencapturekit-sys"
version = "0.1.0"
edition = "2021"
links = "ScreenCaptureKit"
build = "build.rs"

# See more keys and t heir definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/lib.rs"

[dependencies]
objc = { version = "0.2.7", features = ["exception"] }
objc_id = "0.1.1"
objc-foundation = "0.1.1"
objc-encode = "1"
block = "0.1.6"
dispatch = "0.2.0"
once_cell = "1"
anyhow = "1"

[[example]]
name = "scstream"
