[package]
name = "tauri-plugin-gstreamer"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.66"


[dependencies]
tauri = { version = "1" }
gst = { package = "gstreamer", version = "0.20" }
gst-base = { package = "gstreamer-base", version = "0.20" }
gst-video = { package = "gstreamer-video", version = "0.20" }
gst-app = { package = "gstreamer-app", version = "0.20" }
objc = { version = "0.2.7" }
cocoa = { version = "0.24.1" }
core-graphics = { version = "0.22.3" }
